--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <header class="top-nav">
-    <div class="brand">🍮 Inna Corner</div>
+    <div class="brand"> Inna Corner</div>
     <nav>
         <a class="active" href="index.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -25,8 +25,8 @@
 </header>
 
 <section class="hero">
-    <h1>Puding Lezat, Manis & Higienis</h1>
-    <p>Solusi dessert terbaik untuk keluarga dan acara Anda</p>
+    <h1>Puding Lezat, Minuman Segar & Makanan Higienis</h1>
+    <p>Pilihan makanan, minuman, dan dessert lezat untuk setiap momen spesial</p>
     <a href="menu.html" class="btn">Lihat Menu</a>
 </section>
 
@@ -41,25 +41,26 @@
     <div class="about-line"></div>
 
     <p>
-        Inna Corner menghadirkan berbagai macam dessert dan makanan 
-        berat yang lezat, segar, dan dibuat dari bahan-bahan berkualitas 
-        untuk dinikmati oleh semua kalangan. Kami percaya bahwa camilan 
-        manis tidak hanya harus enak, tetapi juga dibuat secara higienis 
-        dan aman untuk dikonsumsi setiap hari.
+        Inna Corner menghadirkan beragam pilihan minuman segar, makanan berat, 
+        dan dessert yang lezat dan dibuat dari bahan-bahan berkualitas untuk 
+        dinikmati oleh semua kalangan. Kami percaya bahwa hidangan yang baik 
+        tidak hanya harus enak, tetapi juga disajikan secara higienis, aman, 
+        an berkualitas untuk konsumsi sehari-hari.
     </p>
 
     <p>
-        Dengan menggunakan bahan pilihan dan proses pembuatan yang terjaga 
-        kebersihannya, Inna Corner kami hadirkan dengan cita rasa lembut, 
-        manis yang pas, serta tampilan yang menarik. Beragam varian rasa kami
-        kembangkan untuk memenuhi selera pelanggan, baik untuk konsumsi pribadi
-        maupun berbagai acara.
+        Dengan menggunakan bahan pilihan dan proses pengolahan yang terjaga 
+        kebersihannya, Inna Corner menyajikan aneka menu seperti nasi goreng 
+        dengan cita rasa khas, dimsum yang lembut dan gurih, salad buah yang 
+        segar, puding manis yang lembut, serta berbagai pilihan minuman yang 
+        menyegarkan. Setiap menu diracik dengan rasa yang pas dan tampilan yang menarik.
     </p>
 
     <p>
-        Dan sekarang, Inna Corner telah menjadi pilihan pelanggan setia yang mempercayakan
-        kebutuhan hidangan manis dan makanan berat mereka kepada kami, sebagai teman santai, 
-        sajian keluarga, maupun pelengkap momen spesial.
+        Kini, Inna Corner telah menjadi pilihan pelanggan setia yang mempercayakan 
+        kebutuhan makanan, minuman, dan dessert mereka kepada kami. Cocok dinikmati 
+        sebagai teman santai, sajian keluarga, maupun pelengkap momen spesial bersama
+        orang terdekat.
     </p>
 </section>
 <!-- Footer -->
@@ -70,14 +71,18 @@
         <div class="footer-brand">
             <h2>Inna<span>Corner</span></h2>
             <p>
-                Kami menjual hidangan penutup dan makanan berat berkualitas dengan bahan pilihan 
+                Kami menjual hidangan penutup, makanan berat, dan minuman berkualitas dengan bahan pilihan 
                 dengan yang proses higienis. Praktis, sehat, dan lezat cocok untuk keluarga Anda yang
                 berlokasi di enrekang atau sekitarnya.
             </p>
 
             <div class="social-icons">
-                <a href="https://wa.me/6281242666222" class="wa">🟢</a>
-            </div>
+    <a href="https://wa.me/6281242666222" class="wa" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+             alt="WhatsApp" class="wa-icon">
+    </a>
+</div>
+
         </div>
 
         <!-- Link Cepat -->
@@ -86,9 +91,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="index.html#tentang">Tentang Kami</a></li>
+                
                 <li><a href="profil.html">Lokasi</a></li>
-                <li><a href="#kontak">Kontak</a></li>
+
             </ul>
         </div>
 
@@ -104,7 +109,7 @@
 
 
 <footer class="footer">
-    <p>© 2025 Puding Manis</p>
+    <p>© 2025 Inna Corner</p>
 </footer>
 
 </body>
