--- a/profil.html
+++ b/profil.html
@@ -18,34 +18,30 @@
 </header>
 
 <section class="profile">
-    <img src="https://source.unsplash.com/200x200/?dessert-shop">
-    <h2>Puding Manis</h2>
+    <img src="https://img-global.cpcdn.com/recipes/b4d742f9567d1ffe/680x781cq80/puding-coklat-vla-vanilla-susu-foto-resep-utama.jpg">
+    <h2>Inna Corner</h2>
     <p>Usaha puding homemade dengan kualitas premium.</p>
-
-    <a href="https://wa.me/6282310115132" target="_blank" class="btn">
-        Hubungi via WhatsApp
-    </a>
 
     <!-- Lokasi Kami -->
 <section class="location-section">
     <h2>Lokasi Kami</h2>
     <div class="location-line"></div>
 
-    <h3>Alamat Puding Manis</h3>
+    <h3>INFORMASI</h3>
 
     <div class="location-item">
         <span class="icon">📍</span>
-        <p><strong>Alamat:</strong> Jl. Ali Pariwusi, Maccorawalie, Lautang Salo, Sulawesi Selatan</p>
+        <p><strong>Alamat:</strong> Jl. Poros Sidrap Endrekang Tator, Patondon Salu, Kec. Maiwa, Kab. Enrekang, Sulawesi Selatan</p>
     </div>
 
     <div class="location-item">
         <span class="icon">📞</span>
-        <p><strong>Telepon/WhatsApp:</strong> +62 823-1011-5132</p>
+        <p><strong>Telepon/WA:</strong> +62 812-4266-6222</p>
     </div>
 
     <div class="location-item">
         <span class="icon">🕒</span>
-        <p><strong>Jam Operasional:</strong> Senin – Minggu: Jam 08:00 – 22:00 WITA</p>
+        <p><strong>Jam Operasional:</strong> Senin – Minggu: Jam 08:00 – 18:00 WITA</p>
     </div>
 
     <div class="location-item">
@@ -59,7 +55,7 @@
     </div>
 
     <a class="btn-location-wa" 
-       href="https://wa.me/6282310115132?text=Halo%20KCW%20Frozen%20Food,%20saya%20ingin%20memesan">
+       href="https://wa.me/6281242666222?text=Halo%20KCW%20Frozen%20Food,%20saya%20ingin%20memesan">
         Pesan via WhatsApp
     </a>
 
@@ -69,10 +65,11 @@
         <p><strong>Info:</strong> Lokasi Toko Kami</p>
     </div>
         <iframe 
-            src="https://www.google.com/maps?q=Jl.%20Gotong%20Royong%20Baranti&output=embed"
-            allowfullscreen=""
-            loading="lazy">
-        </iframe>
+    src="https://www.google.com/maps?q=-3.539889,119.748611&output=embed"
+    allowfullscreen=""
+    loading="lazy">
+</iframe>
+
     </div>
 </section>
 
