--- a/profil.html
+++ b/profil.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profil | Puding Manis</title>
+<title>Profil | Inna Corner</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="top-nav">
-    <div class="brand">🍮 Puding Manis</div>
+    <div class="brand">Inna Corner</div>
     <nav>
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -20,7 +20,7 @@
 <section class="profile">
     <img src="https://img-global.cpcdn.com/recipes/b4d742f9567d1ffe/680x781cq80/puding-coklat-vla-vanilla-susu-foto-resep-utama.jpg">
     <h2>Inna Corner</h2>
-    <p>Usaha puding homemade dengan kualitas premium.</p>
+    <p>Umkm Kuliner Lokal dengan kualitas premium.</p>
 
     <!-- Lokasi Kami -->
 <section class="location-section">
@@ -46,7 +46,7 @@
 
     <div class="location-item">
         <span class="icon">🚚</span>
-        <p><strong>Layanan:</strong> Pengantaran area Enrekang dan sekitarnya</p>
+        <p><strong>Layanan:</strong> Pengantaran area Maroangin dan sekitarnya</p>
     </div>
 
     <div class="location-item">
@@ -55,7 +55,7 @@
     </div>
 
     <a class="btn-location-wa" 
-       href="https://wa.me/6281242666222?text=Halo%20KCW%20Frozen%20Food,%20saya%20ingin%20memesan">
+       href="https://wa.me/6281242666222?text=Asslamualaikum%20Kak%20,%20saya%20ingin%20memesan">
         Pesan via WhatsApp
     </a>
 
@@ -65,7 +65,7 @@
         <p><strong>Info:</strong> Lokasi Toko Kami</p>
     </div>
         <iframe 
-    src="https://www.google.com/maps?q=-3.539889,119.748611&output=embed"
+    src="https://maps.app.goo.gl/KxPNjbtgQKSVKvSh7?g_st=iw"
     allowfullscreen=""
     loading="lazy">
 </iframe>
@@ -77,3 +77,4 @@
 <footer class="footer">© 2025 Puding Manis</footer>
 </body>
 </html>
+
