--- a/profil.html
+++ b/profil.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="top-nav">
-    <div class="brand">Inna Corner</div>
+    <div class="brand"> Inna Corner </div>
     <nav>
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -65,7 +65,7 @@
         <p><strong>Info:</strong> Lokasi Toko Kami</p>
     </div>
         <iframe 
-    src="https://maps.app.goo.gl/KxPNjbtgQKSVKvSh7?g_st=iw"
+    src="https://maps.app.goo.gl/j7ERt6bAYn6Fa6iy6?g_st=iw"
     allowfullscreen=""
     loading="lazy">
 </iframe>
@@ -74,7 +74,8 @@
 </section>
 
 
-<footer class="footer">© 2025 Puding Manis</footer>
+<footer class="footer">© 2025 Inna Corner</footer>
 </body>
 </html>
+
 
