--- a/profil.html
+++ b/profil.html
@@ -65,7 +65,7 @@
         <p><strong>Info:</strong> Lokasi Toko Kami</p>
     </div>
         <iframe 
-    src="https://maps.app.goo.gl/j7ERt6bAYn6Fa6iy6?g_st=iw"
+    src="https://maps.app.goo.gl/KxPNjbtgQKSVKvSh7?g_st=iw"
     allowfullscreen=""
     loading="lazy">
 </iframe>
@@ -77,5 +77,6 @@
 <footer class="footer">© 2025 Inna Corner</footer>
 </body>
 </html>
+
 
 
