--- a/profil.html
+++ b/profil.html
@@ -65,7 +65,7 @@
         <p><strong>Info:</strong> Lokasi Toko Kami</p>
     </div>
         <iframe 
-    src="https://maps.app.goo.gl/KxPNjbtgQKSVKvSh7?g_st=iw"
+    src="https://maps.app.goo.gl/aQFqMAmuC9gainn88?g_st=aw"
     allowfullscreen=""
     loading="lazy">
 </iframe>
@@ -77,6 +77,7 @@
 <footer class="footer">© 2025 Inna Corner</footer>
 </body>
 </html>
+
 
 
 
