--- a/profil.html
+++ b/profil.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="top-nav">
-    <div class="brand"> Inna Corner </div>
+    <div class="brand">Inna Corner</div>
     <nav>
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -20,7 +20,7 @@
 <section class="profile">
     <img src="https://img-global.cpcdn.com/recipes/b4d742f9567d1ffe/680x781cq80/puding-coklat-vla-vanilla-susu-foto-resep-utama.jpg">
     <h2>Inna Corner</h2>
-    <p>Umkm Kuliner Lokal dengan kualitas premium.</p>
+    <p>UMKM Kuliner Lokal dengan Kualitas Premium</p>
 
     <!-- Lokasi Kami -->
 <section class="location-section">
@@ -55,7 +55,7 @@
     </div>
 
     <a class="btn-location-wa" 
-       href="https://wa.me/6281242666222?text=Asslamualaikum%20Kak%20,%20saya%20ingin%20memesan">
+       href="https://wa.me/6281242666222?text=Assalamualaikum%20kak,%20saya%20ingin%20memesan">
         Pesan via WhatsApp
     </a>
 
@@ -65,7 +65,7 @@
         <p><strong>Info:</strong> Lokasi Toko Kami</p>
     </div>
         <iframe 
-    src="https://maps.app.goo.gl/aQFqMAmuC9gainn88?g_st=aw"
+    src="https://www.google.com/maps?q=-3.539889,119.748611&output=embed"
     allowfullscreen=""
     loading="lazy">
 </iframe>
@@ -77,8 +77,3 @@
 <footer class="footer">© 2025 Inna Corner</footer>
 </body>
 </html>
-
-
-
-
-
