--- a/menu.html
+++ b/menu.html
@@ -78,8 +78,9 @@ function pesanWA(nama, harga){
 
 </section>
 
-<footer class="footer">© 2025 Puding Manis</footer>
+<footer class="footer">© 2025 Inna Corner</footer>
 </body>
 </html>
 ...
+
 
